Make the Give & Clear plugins compile too for Java 8.